finish shap explainer job

--- a/.gitignore
+++ b/.gitignore
@@ -161,8 +161,12 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
 *checkpoints*/
+*.ckpt
 Pretrained MoLFormer/*
 data/*
 *results*
 *data_prepare
 *.html
+predictions*
+output*
+events*
